@@ -1,3 +1,7 @@
+2012-10-24  Araki Ken  <arakiken@users.sf.net>
+
+	* fb/x_display.c: Minor fixes.
+
 2012-10-23  Araki Ken  <arakiken@users.sf.net>
 
 	* doc/ja/README.fb: Updated.
